# codex-board

./: .gitignore  AGENTS.md  README.md  biome.json  package.json  rust-toolchain.toml  tsconfig.base.json
apps/backend/: package.json
apps/backend/src/: cli.ts  config.ts  db.ts  index.ts  rollout-parser.ts  skills.ts  sync-coordinator.ts  sync-service.ts  usage.ts
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/gnome/: com.codexboards.Gnome.json  meson.build  package.json
apps/gnome/data/: codex-boards-gnome.in  com.codexboards.Gnome.desktop.in  com.codexboards.Gnome.metainfo.xml.in
apps/gnome/src/: main.js
apps/web/: index.html  package.json  vite.config.ts
apps/web/dev/: react-grab.ts
apps/web/src/: App.tsx  UsagePage.tsx  (+2 more)
docs/design/: architecture.md
docs/implementation/: setup.md
docs/research/: phodex-bridge-thread-sync.md
docs/user/: overview.md
examples/: sample-first-sync-request.json  sample-history.json  sample-onboarding-skip-settings-request.json  sample-parsed-issues.json  sample-skills-response.json  sample-sync-history.json  sample-sync-status.json  sample-thread-payload.json  sample-usage-history.jsonl  sample-usage-response.json
scripts/: build-desktop-sidecar.sh  build-gnome-app.sh  build-gnome-sidecar.sh  dev.sh
tests/backend/: cli.test.ts  config.test.ts  skills.test.ts  usage.test.ts
tests/cli/: codex-board.test.ts
tests/domain/: board.test.ts
tests/fixtures/: rollout-sample.jsonl
tests/gnome/: app.test.ts
tests/web/: format.test.ts  onboarding.test.ts  runtime.test.ts
(+13 files in other folders)
